[package]
name = "tempo"
version = "0.1.0"
authors = ["yucklys"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
async-std = {version = "1.9", features = ["attributes"]}

[dependencies.tempo_core]
path = "src/core"
