[package]
name = "tempo_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
dirs = "3.0"
async-std = "1.9"
